[project]
name ="valapi.py"
version = "0.0.1"
authors = [
    { name="Akex06", email="alessandro@akex.dev" }
]
description = "A Python implementation of the Valorant public and hidden API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]
[project.urls]
Homepage = "https://github.com/akex06/valapi.py"
Issues = "https://github.com/akex06/valapi.py/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"